# crowd-control-system

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  websocket.py
backend/app/api/routes/: __init__.py  alerts.py  data_import.py  events.py  simulation.py  venues.py
backend/app/data/: __init__.py  generator.py  loader.py
backend/app/engine/: __init__.py  evacuation.py  facilities.py  recommender.py  risk_analyzer.py  simulation.py  transport.py
backend/app/models/: __init__.py  alert.py  crowd.py  event.py  venue.py
backend/app/scenarios/: __init__.py  axiata_concert.py  bukit_jalil_exit.py  pavilion_festival.py
backend/app/services/: data_store.py
backend/data/venues/: axiata-arena.json  bukit-jalil.json  pavilion-kl.json
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/[eventId]/: page.tsx
frontend/src/app/data-import/: page.tsx
frontend/src/app/planner/: page.tsx
frontend/src/components/alerts/: AlertPanel.tsx
frontend/src/components/charts/: AttendanceChart.tsx
frontend/src/components/dashboard/: SimulationControls.tsx  StatCard.tsx
frontend/src/components/notifications/: StaffNotifications.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  progress.tsx
frontend/src/components/visualization/: VenueMap.tsx  ZoneList.tsx
frontend/src/hooks/: useSimulation.ts  useWebSocket.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
